Cambios para la 4ta entrega, versión 2

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="mi-container">
                 <div class="card-group">
                     <div class="card">
-                        <img src="./images/marketing_digital2.png" class="card-img-top img-fluid ta-2 caja1" alt="Marketing Digital">
+                        <img src="./images/marketing_digital2.png" class="card-img-top ta-2 caja1" alt="Marketing Digital">
                         <div class="card-body">
                             <h5 class="card-title">Marketing Digital</h5>
                             <p class="card-text">Atendemos el foco de tu negocio o emprendimiento. Realizamos estudios FODA,
