Actualización del index.html
Linea 313 se suprimió la clase "submit" ya que cuando redireccionaba aparecía error 404.
Linea 427 contenía un ">" vacío que no correspondía con nada.

02/04/2021 20:02

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                     </fieldset>
                     <div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="" class="btn btn-primary">Enviar</button>
                     </div>
                 </div>
         </section>
@@ -424,8 +424,6 @@
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
     </script>
 
-    >
-
-</body>
+   </body>
 
 </html>
